# ospf-kotlin

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  ERROR_HANDLING_MIGRATION_PROGRESS.md  LICENSE  README.md  README_ch.md  THROW_EXCEPTIONS_AUDIT.md  count_modules.sh  daily.md  error.md  errs38.txt  errs39.txt  example-errors-lines-32.txt  fix_bare_names.py  fix_double_f64.py  fix_legacy_tt.py  fix_legacy_tt2.py  pom.xml  scan_kdoc.py
.clinerules/: chore.md
.github/: FUNDING.yml
.rules/: chore.md  error-handling.md  framework-architecture.md
changelog/: 1.1.0.md  1.1.0_ch.md
docs/: README_TEMPLATE.md  README_TEMPLATE_ch.md  ddd.md  domain-model-template.md  domain-model-template_ch.md  p7-business-compat-matrix.md
ospf-kotlin-benchmark/: README.md  README_ch.md  pom.xml
ospf-kotlin-core/: README.md  README_ch.md  daily.md  pom.xml  rewrite.md  stage0-baseline.md
ospf-kotlin-core-plugin/: README.md  README_ch.md  pom.xml
ospf-kotlin-core-plugin-copt/: pom.xml
ospf-kotlin-core-plugin-cplex/: pom.xml
ospf-kotlin-core-plugin-gurobi/: pom.xml
ospf-kotlin-core-plugin-heuristic/: pom.xml
ospf-kotlin-core-plugin-scip/: pom.xml
ospf-kotlin-dependencies/: README.md  README_ch.md  pom.xml
ospf-kotlin-example/: README.md  README_ch.md  daily.md  pom.xml
ospf-kotlin-framework-bpp1d/: README.md  README_ch.md  daily.md  pom.xml
ospf-kotlin-framework-bpp3d/bpp3d-interface-renderer/src-tauri/: Cargo.toml  tauri.conf.json
ospf-kotlin-framework-bpp3d/bpp3d-interface-renderer/src-tauri/src/: item_dto.rs  main.rs  renderer_dto.rs
scripts/: k1-analyze.ps1  (+15 more)
(+3665 files in other folders)
